--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,82 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+body{
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #202020;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+
+.container
+{
+  background-color: #202020;
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.card{
+  background-color: rgb(255, 255, 255);
+  border-radius: 10px;
+  /* height: 20rem; */
+  width: 20rem;
+  padding: 1rem;
+  display: flex;
+  justify-content: center;  
+  align-items: center;
+  flex-direction: column;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+
+.title{
+  color: #333;
+  font-size: 1.5rem;
+
+  
+}
+.subtitle{
+  font-size: 0.80rem;
+  color: #525252;
+  margin: 0.5rem 0;
+  font-weight: 500;
 }
 
-.card {
-  padding: 2em;
+.input{
+  border: 1px solid #333;
+  border-radius: 8px;
+  padding: 1rem;
+  color: #333;
+  background-color: #eeeeee;
+  font-size: 0.7rem;
+  width: 60%;
+  outline: none;
+  margin: 0.5rem 0;
 }
 
-.read-the-docs {
-  color: #888;
+.qr-code{
+  margin: 1rem 0;
+  background-color: #eeeeee;
+  width: 60%;
+  border: 1px solid #333;
+  border-radius: 8px;
+  display: flex;
+  justify-content: center;  
+  align-items: center;
+  padding:1rem;
+}
+.btn-download{
+  border: none;
+  background-color: #333;
+  color: #FFF;
+  padding: 0.5rem 1rem;
+  border-radius:4px;
+  text-decoration: none;
+  font-size: 0.7rem;
+  margin-top: 1rem;
+}
+.btn-download:hover{
+  background-color: #4d4d4d;
 }
